namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-jobs-board-reporting-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-jobs-board-reporting-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "prison-education"
    cloud-platform.justice.gov.uk/application: "Jobs Board Reporting"
    cloud-platform.justice.gov.uk/owner: "Education Skills Work and Employment: managing.eswe@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-jobs-board-reporting-ui"
    cloud-platform.justice.gov.uk/team-name: "education-skills-work-employment"
    cloud-platform.justice.gov.uk/review-after: ""
